[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-nbtools"
dynamic = ["version"]
description = "A collection of tools for using inside Jupyter Notebooks"
readme = "README.md"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Sergey Tsimfer", email = "sergeytsimfer@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.10"
dependencies = [
    "pynvml>=11.5.0",
    "blessed>=1.17",
    "psutil>=5.6",
    "requests>=2.24",
]

[project.optional-dependencies]
nbrun = [
    "ipython>=7.10.0",
    "nbconvert>=5.6.1",
]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
nbstat = "nbtools.nbstat.cli:nbstat"
nbwatch = "nbtools.nbstat.cli:nbwatch"
devicestat = "nbtools.nbstat.cli:devicestat"
devicewatch = "nbtools.nbstat.cli:devicewatch"

[project.urls]
Homepage = "https://github.com/analysiscenter/nbtools"
Repository = "https://github.com/analysiscenter/nbtools"

[tool.setuptools.dynamic]
version = {attr = "nbtools.__version__"}

[tool.setuptools.packages.find]
include = ["nbtools*"]